--- a/seq/seq.css
+++ b/seq/seq.css
@@ -20,3 +20,10 @@
     background-color: #f0f2f2;
 }
 
+#loader {
+    position: absolute;
+    top: 200px;
+    left: 200px;
+    padding: 50px;
+    background-color: #ffffff;
+}
