--- a/seq/seq.css
+++ b/seq/seq.css
@@ -25,6 +25,11 @@
     background-color: #f0f2f2;
 }
 
+.Instructions {
+    margin: 20px;
+    width: 600px;
+}
+
 #loader {
     position: absolute;
     top: 200px;
