Moved instrument and scale code into separate csound_data.js file Use Angular directive for number inputs Add randomize every N repeats function

--- a/seq/seq.css
+++ b/seq/seq.css
@@ -1,16 +1,24 @@
+.fcNumberInput {
+    width: 60px;
+}
+
 .NoteGridContainer {
     background-color: #18d8e0;
     padding: 50px;
     width: 1200px;
 }
 
-.NumericInput {
-    width: 50px;
-}
-
 .NoteCell {
     padding : 25px;
     border: 4px solid black;
+}
+
+.RandomizeEveryNActive {
+    color: black;
+}
+
+.RandomizeEveryNDisabled {
+    color: #888888;
 }
 
 .disabled {
